// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell: title o 1`] = `
<div
  className="btn btn-o"
  onClick={undefined}
>
  O
</div>
`;

exports[`Cell: title x 1`] = `
<div
  className="btn btn-x"
  onClick={undefined}
>
  X
</div>
`;
